--- a/app/views/bookmarks/edit.html.erb
+++ b/app/views/bookmarks/edit.html.erb
@@ -1,12 +1,12 @@
-<h1>Save A Bookmark</h1>
-
-
-
-<%= form_with scope: :bookmark, url: bookmarks_path, local: true do |form| %>
+<h1>Edit Bookmark</h1>
+ 
+<%= form_with(model: @bookmark, local: true) do |form| %>
+ 
+ 
+  <p>
     <%= form.label :title %><br>
     <%= form.text_field :title %>
   </p>
- 
  
   <p>
     <%= form.label :URL %><br>
@@ -16,6 +16,7 @@
   <p>
     <%= form.submit %>
   </p>
+ 
 <% end %>
-
+ 
 <%= link_to 'Back', bookmarks_path %>
