--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -7,3 +7,5 @@
   <strong>URL:</strong>
   <%= @bookmark.URL %>
 </p>
+<%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
+<%= link_to 'Back', bookmarks_path %>
