--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -9,3 +9,6 @@
 </p>
 <%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
 <%= link_to 'Back', bookmarks_path %>
+<%= link_to 'Destroy', bookmark_path(@bookmark),
+              method: :delete,
+              data: { confirm: 'Are you sure?' } %>
