CRUD on first model, added second model

--- a/app/views/bookmarks/show.html.erb
+++ b/app/views/bookmarks/show.html.erb
@@ -6,9 +6,33 @@
 <p>
   <strong>URL:</strong>
   <%= @bookmark.URL %>
-</p>
+ 
+<h2>Comments</h2>
+<% @bookmark.comments.each do |comment| %>
+ 
+ 
+  <p>
+    <strong>Comment:</strong>
+    <%= comment.body %>
+  </p>
+<% end %>
+ 
+<h2>Add a comment:</h2>
+<%= form_with(model: [ @bookmark, @bookmark.comments.build ], local: true) do |form| %>
+  <p>
+    <%= form.label :commenter %><br>
+    <%= form.text_field :commenter %>
+  </p>
+  <p>
+    <%= form.label :body %><br>
+    <%= form.text_area :body %>
+  </p>
+  <p>
+    <%= form.submit %>
+  </p>
+<% end %>
 <%= link_to 'Edit', edit_bookmark_path(@bookmark) %> |
 <%= link_to 'Back', bookmarks_path %>
-<%= link_to 'Destroy', bookmark_path(@bookmark),
+<%= link_to 'Delete', bookmark_path(@bookmark),
               method: :delete,
               data: { confirm: 'Are you sure?' } %>
