--- a/app/views/bookmarks/index.html.erb
+++ b/app/views/bookmarks/index.html.erb
@@ -1,8 +1,8 @@
 
-<h1>Listing bookmarks</h1>
+<h1>Posts</h1>
 
 
-<%= link_to 'New Bookmark', new_bookmark_path %>
+<%= link_to 'New Post', new_bookmark_path %>
 
  
 <table>
